--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-hash-link": "^2.4.4",
     "@types/styled-components": "^5.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-router-dom": "^6.0.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
